--- a/School/WebApplication1/Views/DonHang/List.cshtml
+++ b/School/WebApplication1/Views/DonHang/List.cshtml
@@ -18,7 +18,7 @@
                     </form>
                     <div class="col-md-10">
                         <form name="timkiem" style="width: 300px; padding-top: 11px; " class="pull-right">
-                            <div class="form-group from-inline">
+                            <div class="form-group from-inline"  style="float:right">
                                 <input placeholder="Nhập" type="text" name="searchkey" id="search-DonHang" onchange="search(event)" class="form-control form-inline" />
                                 <input type="submit" name="submit" value="Tìm Kiếm" class="form-control" onclick="search(event)" id="btn-search" />
                             </div>
