--- a/School/WebApplication1/Views/Account/List.cshtml
+++ b/School/WebApplication1/Views/Account/List.cshtml
@@ -10,7 +10,7 @@
 }
 
 <div class="row">
-    <div class="col-md-12">S
+    <div class="col-md-12">
         <div class="card" style="margin-bottom: 11px;">
             <div class="card-header">
                 <div class="row">
