--- a/School/WebApplication1/Views/Loai/_AddPartial.cshtml
+++ b/School/WebApplication1/Views/Loai/_AddPartial.cshtml
@@ -46,3 +46,20 @@
         </div>
     </div>
 </div>
+
+<script>
+    $("#btn-save").click(function () {
+        var data = $("#myForm").serialize();
+        $.ajax({
+            type: "Post",
+            url: "/LoaiController/SaveDataInDatabase",
+            data: data,
+            success: function (result) {
+                alert("Success !");
+                window.location.href = "Loai";
+                $('#common-modal').modal('hide');
+            }
+
+        })
+    })
+</script>
