--- a/School/WebApplication1/Views/HangHoa/_AddPartial.cshtml
+++ b/School/WebApplication1/Views/HangHoa/_AddPartial.cshtml
@@ -10,7 +10,7 @@
         </div>
         <div class="modal-body">
             <form id="myForm">
-                <div class="form-group" style="">
+                <div class="form-group" style="display:none!">
                     <input id="IdHangHoa" value="@Model.Id" class="form-control" />
                 </div>
                 <div class="form-group">
@@ -44,22 +44,6 @@
                 <div class="form-group">
                     <label asp-for="MaLoai" class="control-label">Mã Loại</label>
                     <input id="MaLoai" asp-for="MaLoai" class="form-control" />
-                </div>
-                <div class="form-group">
-                    <label asp-for="CreatedBy" class="control-label"></label>
-                    <input id="CreatedBy" asp-for="CreatedBy" class="form-control" />
-                </div>
-                <div class="form-group">
-                    <label asp-for="CreatedDate" class="control-label"></label>
-                    <input id="CreatedDate" asp-for="CreatedDate" class="form-control" />
-                </div>
-                <div class="form-group">
-                    <label asp-for="UpdatedDate" class="control-label"></label>
-                    <input id="UpdatedDate" asp-for="UpdatedDate" class="form-control" />
-                </div>
-                <div class="form-group">
-                    <label asp-for="UpdatedBy" class="control-label"></label>
-                    <input id="UpdatedBy" asp-for="UpdatedBy" class="form-control" />
                 </div>
             </form>
         </div>
