--- a/School/WebApplication1/Views/Shared/Pagination.cshtml
+++ b/School/WebApplication1/Views/Shared/Pagination.cshtml
@@ -8,12 +8,12 @@
         <li class="page-item disabled">
             <a class="page-link" href="#" tabindex="-1">Previous</a>
         </li>
-        
+
         @for (var i = 1; i <= totalPages; i++)
         {
             var active = "";
             if (i == Model.Item3) active = "active";
-            <li id="page" class="page-item @active @i"><a id="bodyClick" class="page-link @i" onclick="DoPaging(@i,@Model.Item2,@Model.Item3, '@Model.Item4')" href="#">@i</a></li>  
+            <li id="page" class="page-item @active page-item-@i"><a id="bodyClick" class="page-link page-link-@i" onclick="DoPaging(@i,@Model.Item2,@Model.Item3, '@Model.Item4')" href="#">@i</a></li>
         }
 
         <li class="page-item">
