--- a/School/WebApplication1/Views/Shared/_Layout.cshtml
+++ b/School/WebApplication1/Views/Shared/_Layout.cshtml
@@ -54,6 +54,7 @@
 <!-- Control Center for Now Ui Dashboard: parallax effects, scripts for the example pages etc -->
 <script src="assets/js/paper-dashboard.min.js?v=2.0.1" type="text/javascript"></script><!-- Paper Dashboard DEMO methods, don't include it in your project! -->
 <script src="assets/demo/demo.js"></script>
+<script src="js/common.js"></script>
 <script>
     $(document).ready(function () {
         // Javascript method's body can be found in assets/assets-for-demo/js/demo.js
