--- a/School/WebApplication1/Views/Shared/Pagination.cshtml
+++ b/School/WebApplication1/Views/Shared/Pagination.cshtml
@@ -5,8 +5,9 @@
 <nav aria-label="Page navigation example" style="margin-top: 0;">
     <p id="TotalRecords" class="pull-left">Total records: @Model.Item1</p>
     <ul class="pagination justify-content-end">
-        <li class="page-item disabled">
-            <a class="page-link" href="#" tabindex="-1">Previous</a>
+
+        <li class="page-item active-pre" style="display:none">
+            <a class="page-link " onclick="Pre(@totalPages)" href="#" tabindex="-1">Previous</a>
         </li>
 
         @for (var i = 1; i <= totalPages; i++)
@@ -14,10 +15,11 @@
             var active = "";
             if (i == Model.Item3) active = "active";
             <li id="page" class="page-item @active page-item-@i"><a id="bodyClick" class="page-link page-link-@i" onclick="DoPaging(@i,@Model.Item2,@Model.Item3, '@Model.Item4')" href="#">@i</a></li>
+
         }
 
-        <li class="page-item">
-            <a class="page-link" href="#">Next</a>
+        <li class="page-item active-next">
+            <a class="page-link" onclick="Next(@totalPages)" href="#">Next</a>
         </li>
     </ul>
 </nav>
